test/parser/error_parsing_else_block.dmz
// RUN: (dmz %s -ast-dump 2>&1 || true) | filecheck %s
fn main() -> void {
    if (0) {}
    else {
// CHECK: [[# @LINE + 1 ]]:69: error: expected '}' at the end of a block
// CHECK: [[# @LINE ]]:69: error: expected '}' at the end of a block
